@@ -1,11 +1,10 @@
 package by.zharski.idftechtask.client;
 
-import com.github.tomakehurst.wiremock.junit5.WireMockExtension;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.RegisterExtension;
 import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.web.reactive.function.client.WebClient;
+import org.wiremock.spring.ConfigureWireMock;
 import org.wiremock.spring.EnableWireMock;
 
 import java.io.IOException;
@@ -15,31 +14,28 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 
 import static com.github.tomakehurst.wiremock.client.WireMock.*;
-import static com.github.tomakehurst.wiremock.core.WireMockConfiguration.wireMockConfig;
 import static org.junit.jupiter.api.Assertions.*;
 
-@EnableWireMock
+@EnableWireMock(
+        @ConfigureWireMock(
+                port = 8080
+        )
+)
 public class ExchangeRateClientTest {
 
     private ExchangeRateClient exchangeRateClient;
 
-    @RegisterExtension
-    static WireMockExtension wireMockServer = WireMockExtension.newInstance()
-            .options(wireMockConfig().dynamicPort())
-            .build();
-
     @BeforeEach
     void setUp() {
         WebClient webClient = WebClient.builder()
-                .baseUrl(wireMockServer.baseUrl())
+                .baseUrl("http://localhost:8080")
                 .build();
         exchangeRateClient = new ExchangeRateClient(webClient);
         ReflectionTestUtils.setField(exchangeRateClient, "apiKey", "test-api-key");
     }
-
-
 
     @Test
     void getExchangeRate_Success() throws Exception {
@@ -52,12 +48,15 @@ public class ExchangeRateClientTest {
                 .withQueryParam("apikey", equalTo("test-api-key"))
                 .willReturn(okJson(responseBody)));
 
-        var result = exchangeRateClient.getExchangeRate("USD", "EUR", LocalDate.of(2023, 1, 1)).block();
+        var result = exchangeRateClient.getExchangeRate(
+                "USD",
+                "EUR",
+                LocalDate.of(2023, 1, 1)
+        ).block();
 
         assertNotNull(result);
         assertEquals("ok", result.status());
 
-        // Verify meta
         var meta = result.meta();
         assertEquals("USD/EUR", meta.symbol());
         assertEquals("1day", meta.interval());
@@ -65,11 +64,10 @@ public class ExchangeRateClientTest {
         assertEquals("EUR", meta.targetCurrency());
         assertEquals("Physical Currency", meta.type());
 
-        // Verify values
         var values = result.values();
         assertEquals(1, values.size());
-        var firstValue = values.get(0);
-        assertEquals(LocalDate.of(2023, 1, 1), firstValue.datetime());
+        var firstValue = values.getFirst();
+        assertEquals(LocalDateTime.of(2023, 1, 1, 1, 1, 1), firstValue.datetime());
         assertEquals(new BigDecimal("0.9500"), firstValue.open());
         assertEquals(new BigDecimal("0.9600"), firstValue.high());
         assertEquals(new BigDecimal("0.9400"), firstValue.low());
@@ -78,7 +76,7 @@ public class ExchangeRateClientTest {
 
     @Test
     void getExchangeRate_ClientError() {
-        wireMockServer.stubFor(get(urlPathEqualTo("/time_series"))
+        stubFor(get(urlPathEqualTo("/time_series"))
                 .willReturn(badRequest()));
 
         var exception = assertThrows(RuntimeException.class, () ->
@@ -86,12 +84,12 @@ public class ExchangeRateClientTest {
         );
 
         assertTrue(exception.getMessage().contains("400"));
-        wireMockServer.verify(3, getRequestedFor(urlPathEqualTo("/time_series")));
+        verify(3, getRequestedFor(urlPathEqualTo("/time_series")));
     }
 
     @Test
     void getExchangeRate_ServerError_Retries() {
-        wireMockServer.stubFor(get(urlPathEqualTo("/time_series"))
+        stubFor(get(urlPathEqualTo("/time_series"))
                 .willReturn(serverError()));
 
         var exception = assertThrows(RuntimeException.class, () ->
@@ -99,7 +97,7 @@ public class ExchangeRateClientTest {
         );
 
         assertTrue(exception.getMessage().contains("500"));
-        wireMockServer.verify(3, getRequestedFor(urlPathEqualTo("/time_series")));
+        verify(3, getRequestedFor(urlPathEqualTo("/time_series")));
     }
 
     @Test
